# idlc2java

./: .gitignore  AGENTS.md  BUILD.md  CMakeLists.txt  LICENSE  README.md
CommonEnums/: StatusCode.java
CommonStructs/: InnerStruct.java
CommonTypedefs/: ByteType.java  DoubleType.java  FloatType.java  IdentifierType.java  IntType.java  LLongType.java  LongArrayType.java  UIntType.java  ULLongType.java
Shapes/: Circle.java  Point.java  Rectangle.java  ShapeType.java
examples/: common_types.idl  shapes.idl
examples/all-types/: common_types.idl  shapes.idl
include/: idlc_java.h
src/: annotation.c  generator.c  java_cdr.c  java_generator.c  java_record.c  java_record.c.bak  java_type.c  package_resolver.c  string_builder.c
tests/: CMakeLists.txt  run_tests.c
